Fix: Gaps in smaller devices

--- a/public/css/contributor-highlights-public.css
+++ b/public/css/contributor-highlights-public.css
@@ -113,7 +113,7 @@
 .badges-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 1em;
+    gap: .5em;
 }
 
 .badge-item {
@@ -615,5 +615,6 @@
 
     .badges-grid {
         grid-template-columns: 1fr;
+        gap: 0;
     }
 } 
